# Relationship-Variable-Reward-Scheduler

./: .gitignore  README.md  START_APP.md  docker-compose.yml  package.json  pnpm-lock.yaml  tsconfig.base.json
.github/workflows/: ci.yml  deploy.yml  monthly-dependency-update.yml
.security/reports/: npm-audit.json  pip-audit.json
apps/api/: Dockerfile  package.json  vitest.config.ts
apps/api/src/: app.test.ts  app.ts  config.ts  index.ts  security.test.ts
apps/api/src/db/: connect.ts
apps/api/src/lib/: http-error.ts  jwt.ts  zod.ts
apps/api/src/middleware/: auth.ts  error-handler.ts
apps/scheduler-py/: .coverage  Dockerfile  pyproject.toml  requirements.audit.txt
apps/scheduler-py/src/scheduler_py/: __init__.py  app.py  logic.py  main.py  models.py
apps/scheduler-py/tests/: test_app_endpoints.py  test_logic.py
apps/web/: Dockerfile  index.html  package.json  playwright.config.ts  tsconfig.json  vitest.config.ts
apps/web/e2e/: events-workflow.spec.ts
apps/web/playwright-report/: index.html
apps/web/src/: App.test.tsx  App.tsx  main.tsx  styles.css
apps/web/test-results/: .last-run.json
apps/worker/: Dockerfile  package.json  vitest.config.ts
apps/worker/src/: config.ts  index.ts
deploy/helm/relationship-reward/: Chart.yaml  values-dev.yaml  values-prod.yaml  values.yaml
docs/: FUTURE_AGENTS.md  README.md  architecture.md  aws-cost-guardrails.md  deployment.md  security.md
tools/local/: run-local.sh
tools/migrations/: normalize-category-sets.ts  normalize-event-configs.ts
tools/security/: check-waivers.mjs
(+94 files in other folders)
